--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "entry": "main.js",
     "name": "PShop",
-    "type": "lse-nodejs",
+    "type": "lse-quickjs",
     "description": "商店系统插件",
     "version": "3.0.0",
     "dependencies": [
         {
-            "name": "legacy-script-engine-nodejs"
+            "name": "legacy-script-engine-quickjs"
         }
     ]
 }
