脚手架，完善部分功能

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,12 @@
     "dependencies": [
         {
             "name": "legacy-script-engine-quickjs"
+        },
+        {
+            "name": "GMLIB-LegacyRemoteCallApi"
+        },
+        {
+            "name": "GMLIB"
         }
     ]
 }
