重构-1阶段 新年快乐!

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "entry": "main.js",
     "name": "PShop",
-    "type": "lse-quickjs",
+    "type": "lse-nodejs",
     "author": "Planet工作室-星辰开发组-春风",
     "description": "商店插件",
     "version": "3.0.0",
     "dependencies": [
         {
-            "name": "legacy-script-engine-quickjs"
+            "name": "legacy-script-engine-nodejs"
         },
         {
             "name": "GMLIB-LegacyRemoteCallApi"
