--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "type": "lse-nodejs",
     "author": "Planet工作室-星辰开发组-春风",
     "description": "商店插件",
-    "version": "3.0.0",
+    "version": "3.2.0",
     "dependencies": [
         {
             "name": "legacy-script-engine-nodejs"
@@ -14,6 +14,9 @@
         },
         {
             "name": "GMLIB"
+        },
+        {
+            "name": "SMoney"
         }
     ]
 }
